# Instagram-AI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.sh
docker/: .dockerignore  ai.Dockerfile  compose.yaml  server.Dockerfile
model/: Modelfile  download.sh  start.sh
src/: ai.py  config.py  instagram.py  main.py  models.py  relogin.py
