[project]
name = "instagram-ai"
version = "0.1.0"
description = "Run ai models locally and chat with them on Instagram."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiograpi>=1.10.25",
    "beanie>=2.1.0",
    "ollama>=0.6.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]
